crates/repovec-core/tests/ui/github_oauth_secret_wrappers_are_opaque.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
 --> tests/ui/github_oauth_secret_wrappers_are_opaque.rs:6:36
  |
6 |     let _constructed_device_code = DeviceCode("device-secret".to_owned());
  |                                    ^^^^^^^^^^
  |
note: constructor is not visible here due to private fields
 --> src/github_oauth/mod.rs
  |
  | pub struct DeviceCode(String);
  |                       ^^^^^^ private field
help: you might have meant to use the `new` associated function
  |
6 |     let _constructed_device_code = DeviceCode::new("device-secret".to_owned());
  |                                              +++++

error[E0616]: field `0` of struct `UserCode` is private
 --> tests/ui/github_oauth_secret_wrappers_are_opaque.rs:9:36
  |
9 |     let _raw_user_code = user_code.0;
  |                                    ^ private field

error[E0616]: field `token` of struct `AccessToken` is private
  --> tests/ui/github_oauth_secret_wrappers_are_opaque.rs:12:28
   |
12 |     let _raw_token = token.token;
   |                            ^^^^^ private field
